# ZeroDimension

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
docs/: AXIOMS_V3.md  SPECIFICATION_V3.md
docs/review/: KNOWN_LIMITATIONS_V3.md
paper/: README.md  ZeroDimension_Technical_Report.md  bibliography.bib
tests/: conftest.py  test_core.py  test_display.py  test_layers.py  test_property_based.py  test_solver.py  test_transition_operator.py
zerodimension/: __init__.py  cli.py  display.py  exceptions.py  operators.py  solver.py  theta.py
